refactor: 생성자를 팩토리에서 관리, 팩토리에서 객체 생성